# awssam-rust-playground

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
cfn/: Makefile  dynamodb.yaml
envs/: origin.json
events/: event.json
src/: aws.rs  delete.rs  get.rs  model.rs  post.rs  put.rs  repository.rs  response.rs  setting.rs
